<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic Use -->
    <string name="tmp">Temp Value</string>

    <!-- Application identifiers -->
    <string name="app_name">Troll</string>
    <string name="app_tag">trollMaps</string>
    <string name="app_description">        Displays current or updated location using Location Services for the TROLL app</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="desc"> TrollLoco</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>

    <!-- Diary -->
    <string name="diary_title">Diary</string>
    <string name="no_notes">No Diary Entries!</string>
    <string name="diary_body">Body</string>
    <string name="diary_confirm">Confirm</string>
    <string name="diary_edit_note">Edit</string>
    <string name="diary_menu_insert">Insert</string>
    <string name="diary_menu_delete">Delete</string>
    <string name="Maps">Locations</string>
    <string name="Menu">Menus</string>
    <string name="Profile">Profile</string>
    <string name="logout_title">Logout</string>
    <string name="diary_entry_title">Title</string>
    <string name="item">Item</string>
    <string name="num_shots"># espresso shots:</string>
    <string name="oz_coffee">Oz of coffee:</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="rate_me">Rate Me</string>
    <string name="descript">Description: </string>
    <string name="cat">Category: </string>
    <string name="rating">Rating: </string>
    <string name="filter_menu">Filter Menu</string>
    <string name="filt_by_cat">Filter by Category</string>
    <string name="filt_by_title">Filter by Title</string>
    <string name="filt_by_rating">Filter by Rating</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="a_z">A to Z</string>
    <string name="z_a">Z to A</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="day">Day</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pick_a_location">Pick A Location</string>
    <string name="insert_desc">Insert Description</string>
    <string name="low_price">Lowest Price:</string>
    <string name="votes">Votes: </string>
    

    <!-- Singup/Login Layout -->
    <string name="login">Log in</string>
    <string name="login_act_layout">Login activity layout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>


    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="email_hint">you@youremail.com</string>
    <string name="favs">Favorites</string>

    <!-- Password Retrieval -->
    <string name="username_prompt">Enter your username</string>
    <string name="submit">Submit</string>

    <!-- Favorites -->
    <string name="title">Title: </string>
    <string name="fav">Favorites </string>
    <string name="your_fav">Your Favorites:</string>
    
    <!-- Map -->
    <string name="nearest_loc">Nearest Location</string>
    

</resources>