<?xml version="1.0" encoding="utf-8"?>
<!--
    Filename: location_menu_list.xml
	Description: contains the list for menu items from SingleMenuActivity.java
	Author: Kevin Chang & Joel Abitan
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <!-- Name Label -->

    <TextView
        android:id="@+id/itemId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:text="@string/insert_desc"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Email label -->

    <TextView
        android:id="@+id/rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/rating"
        android:textColor="#141414"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lowestPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/low_price"
        android:textColor="#141414"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_votes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/votes"
        android:textColor="#acacac"
        android:visibility="gone" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/votes"
        android:textColor="#acacac"
        android:visibility="gone" />

    <TextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/votes"
        android:textColor="#acacac"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sizes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/votes"
        android:textColor="#acacac"
        android:visibility="gone" />

    <!-- Mobile number label -->

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/cat"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />

</LinearLayout>